Preview: better clean after standard thumbnailer

* Avoid generating thumbnails for files in /tmp for the
   standardthumbnailer
 * Remove temp file after standard thumbnailer completion or error
 * StandardThumbnailJob starts process only after connection have been
   set
 * StandardThumbnailJob stop process when killed
 * Use a Private class for StandardThumbnailJob

BUG: 493274